# Happy-Badminton

./: .coverage  .gitignore  CLAUDE.md  Dockerfile  README.md  README_HF_SPACE.md  README_en.md  README_zh.md  config.yaml  main.py  pyproject.toml  requirements_hf.txt  run.sh
.github/workflows/: push-to-hf.yml
data/raw/: Tournament Results - Sample.xlsx
docs/file/: FEATURES.md  ML_NOTES.md  MODEL_HISTORY.md  test-all-england-2026-sf.md
frontend/: app.py
frontend/static/: app.js  style.css
frontend/templates/: index.html
models/: nat_pair_win_rates.json  set_count_model.pkl  set_count_results.json  simplified_ensemble.pkl  simplified_feature_importance.json  simplified_results.json
scripts/: generate_eval_plots.py  generate_plots.py  optimize_sota.py  prepare_data.py  train_quick.py  train_set_count.py  train_simplified.py  upload_models_to_hf.py  validate_model.py
src/data/: advanced_features.py  feature_engineering.py  loader.py  preprocessor.py  simplified_features.py
src/models/: ensemble_models.py
src/utils/: constants.py  helpers.py  logger.py
src/visualization/: plots.py
tests/: test_advanced_features.py  test_app_features.py  test_data_loader.py  test_ensemble_complete.py  test_ensemble_models.py  test_feature_engineering.py  test_flask_api.py  test_helpers.py  test_leakage_guard.py  test_momentum_streak_fatigue.py  test_preprocessor.py  test_set_count.py  test_simplified_features.py
